[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ess"
version = "0.0.1"
authors = [
  { name="Sang T. Truong", email="sttruong@cs.stanford.edu" },
]
description = "Elliptical Slide Sampler"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.3.0",
    "numpy",
]


[project.urls]
Homepage = "https://github.com/sangttruong/ess"

[tool.hatch.build.targets.wheel]
      packages = ["src/ess"]